# processboard

./: .gitignore  LICENSE  README.md  __init__.py  build.sh  processboard.py  pyproject.toml  requirements.txt  tests.py
board/: index.js  package-lock.json  package.json  tailwind.config.js
board/public/: index.html
