[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["dependencies"]
name = "processboard"
version = "0.0.1"
authors = [{ name = "Ari Stehney", email = "aristehney@gmail.com" }]
description = "Simple and beautiful lightweight web progress dashboards in a few lines of code."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Homepage = "https://github.com/CoderElectronics/processboard"
Issues = "https://github.com/CoderElectronics/processboard/issues"
